--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Backend",
+  "name": "BGFramework",
   "version": "1.0.0",
-  "description": "Backend API",
-  "main": "index.js",
+  "description": "BG Framework - Backend",
+  "main": "server.js",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.16.1",
+    "cluster": "^0.7.7",
     "cors": "^2.8.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^7.3.0",
+    "mysql": "^2.15.0",
     "node-firebird": "^0.8.1",
     "npm": "^5.8.0"
   },
