--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "BGFramework",
-  "version": "1.0.0",
-  "description": "BG Framework - Backend",
-  "main": "server.js",
-  "dependencies": {
-    "bcrypt": "^2.0.1",
-    "body-parser": "^1.18.3",
-    "cluster": "^0.7.7",
-    "cors": "^2.8.1",
-    "express": "^4.16.3",
-    "fs": "0.0.1-security",
-    "jsonwebtoken": "^7.3.0",
-    "mysql": "^2.16.0",
-    "node-firebird": "^0.8.6",
-    "npm": "^5.10.0",
-    "q": "^1.5.1"
+  "name": "bgframework",
+  "version": "2.0.0",
+  "description": "BG Framework",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Belizário Gonçalves Ribeiro Filho.",
-  "license": "ISC"
+  "author": "Belizário G. Ribeiro Filho",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^3.0.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "mysql": "^2.16.0",
+    "node-firebird": "^0.8.6"
+  }
 }
