--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "Belizário G. Ribeiro Filho",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.1",
+    "bcrypt": "^3.0.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
-    "node-firebird": "^0.8.6"
+    "node-firebird": "^0.8.6",
+    "node-gyp": "^3.8.0"
   }
 }
